@@ -30,7 +30,9 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Map;
 
+import static org.hamcrest.CoreMatchers.startsWith;
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertThat;
 
 /**
  * @author Stephen Mallette (http://stephen.genoprime.com)
@@ -124,9 +126,11 @@ public class DriverRemoteAcceptorTest {
         acceptor.configure(Arrays.asList("timeout", "-1"));
     }
 
-    @Test(expected = RemoteException.class)
-    public void shouldNotConnectWhenNoHostIsAvailable() throws Exception {
-        // there is no gremlin server running for this test, so this remote should throw due to NoHostAvailable exception thrown by the driver
-        acceptor.connect(Arrays.asList(Storage.toPath(TestHelper.generateTempFileFromResource(this.getClass(), "remote.yaml", ".tmp"))));
+    @Test
+    public void shouldConnectWithError() throws Exception {
+        // there is no gremlin server running for this test, so the driver will throw NoHostAvailableException, log an
+        // error, and return with a message to the console.
+        assertThat(acceptor.connect(Arrays.asList(Storage.toPath(TestHelper.generateTempFileFromResource(this.getClass(),
+                        "remote.yaml", ".tmp")))).toString(), startsWith("Configured "));
     }
 }
